# md-audio

./: .gitignore  .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
native/: Cargo.toml
native/src/: language.rs  lib.rs  main.rs  markdown.rs  protocol.rs  speech.rs  summary.rs
python/: mlx_worker.py
scripts/: build-native.mjs  clean.mjs  package-vsix.mjs  test-native.mjs
src/: extension.ts  highlightController.ts  mlxBackend.ts  nativeBridge.ts  platform.ts  protocol.ts  settings.ts  speed.ts  summaryPreparation.ts
src/test/: highlightController.test.ts  mlxBackend.test.ts  nativeBridge.test.ts  platform.test.ts  settings.test.ts  speed.test.ts  summaryPreparation.test.ts
