[package]
name = "md-audio-native"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
pulldown-cmark = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tts = "0.26.3"
whatlang = "0.18.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa-foundation = "0.1.2"
